# ultrasonic_counter

./: CMakeLists.txt  avr-gcc.toolchain.cmake
headers/hardware/: hc_sr04.h
src/: hc_sr04.c  main.c
src/hardware/: hc_sr04.c
src/uart/: uart.c  uart.h
